更新 確認第一版 Controller -> Service 的邏輯，添加 ServerLayer 對所有介面的 DependencyInjection

--- a/MobeAdmin/MobeAdmin.Service/MobeAdmin.Service.csproj
+++ b/MobeAdmin/MobeAdmin.Service/MobeAdmin.Service.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Service\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MobeAdmin.Domain\MobeAdmin.Domain.csproj" />
   </ItemGroup>
 
 </Project>
