--- a/MobeAdmin/MobeAdmin/MobeAdmin.csproj
+++ b/MobeAdmin/MobeAdmin/MobeAdmin.csproj
@@ -11,16 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\ProductManage\Data\" />
-    <Folder Include="Areas\ProductManage\Models\" />
-    <Folder Include="Areas\ProductManage\Views\" />
-    <Folder Include="Areas\SystemManage\Data\" />
-    <Folder Include="Areas\SystemManage\Models\" />
-    <Folder Include="Areas\UserManage\Data\" />
-    <Folder Include="Areas\UserManage\Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\MobeAdmin.Service\MobeAdmin.Service.csproj" />
     <ProjectReference Include="..\MobeAdmin.Utility\MobeAdmin.Utility.csproj" />
   </ItemGroup>
 
