更新 建立基礎 Repository, SQL Database Factory,與撰寫實驗第一個資料儲存鏈路

--- a/MobeAdmin/MobeAdmin.Service/MobeAdmin.Service.csproj
+++ b/MobeAdmin/MobeAdmin.Service/MobeAdmin.Service.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MobeAdmin.DataAccess\MobeAdmin.DataAccess.csproj" />
     <ProjectReference Include="..\MobeAdmin.Domain\MobeAdmin.Domain.csproj" />
   </ItemGroup>
 
