--- a/MobeAdmin/MobeAdmin.DataAccess/MobeAdmin.DataAccess.csproj
+++ b/MobeAdmin/MobeAdmin.DataAccess/MobeAdmin.DataAccess.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MobeAdmin.Domain\MobeAdmin.Domain.csproj" />
   </ItemGroup>
 
 </Project>
