更新 打入 AutoMapper 負責處理 Model 之間的轉換

--- a/MobeAdmin/MobeAdmin/appsettings.json
+++ b/MobeAdmin/MobeAdmin/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Master": "Data Source=localhost;Initial Catalog=PracticeDB;Integrated Security=true;Integrated Security=SSPI;",
+    "Slave": "Data Source=localhost;Initial Catalog=PracticeDB;Integrated Security=true;Integrated Security=SSPI;"
+  },
+  //Data Source =.\\; Integrated Security = true
   "Logging": {
     "LogLevel": {
       "Default": "Information",
