更新 移除與新增一些套件

--- a/MobeAdmin/MobeAdmin/MobeAdmin.csproj
+++ b/MobeAdmin/MobeAdmin/MobeAdmin.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MobeAdmin.Core\MobeAdmin.Core.csproj" />
     <ProjectReference Include="..\MobeAdmin.Service\MobeAdmin.Service.csproj" />
     <ProjectReference Include="..\MobeAdmin.Utility\MobeAdmin.Utility.csproj" />
   </ItemGroup>
