--- a/MobeAdmin/MobeAdmin.Domain/MobeAdmin.Domain.csproj
+++ b/MobeAdmin/MobeAdmin.Domain/MobeAdmin.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="View\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
 </Project>
