更新 增加 BaseRepository 新增/更新的 sql code Generate

--- a/MobeAdmin/MobeAdmin/appsettings.json
+++ b/MobeAdmin/MobeAdmin/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Master": "Data Source=localhost;Initial Catalog=PracticeDB;Integrated Security=true;Integrated Security=SSPI;",
-    "Slave": "Data Source=localhost;Initial Catalog=PracticeDB;Integrated Security=true;Integrated Security=SSPI;"
+    "Master": "Data Source=.\\sqlexpress;Initial Catalog=MobeAdmindb;Integrated Security=true;Integrated Security=SSPI;",
+    "Slave": "Data Source=.\\sqlexpress;Initial Catalog=MobeAdmindb;Integrated Security=true;Integrated Security=SSPI;"
   },
   //Data Source =.\\; Integrated Security = true
   "Logging": {
