新更 EasyCaching 依賴套件,新建 New 系列實作各種 Pattern 的緩存資料庫雙寫

--- a/MobeAdmin/MobeAdmin/MobeAdmin.csproj
+++ b/MobeAdmin/MobeAdmin/MobeAdmin.csproj
@@ -16,4 +16,11 @@
     <ProjectReference Include="..\MobeAdmin.Utility\MobeAdmin.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\DataSearchManage\Controllers\" />
+    <Folder Include="Areas\DataSearchManage\Data\" />
+    <Folder Include="Areas\DataSearchManage\Models\" />
+    <Folder Include="Areas\DataSearchManage\Views\" />
+  </ItemGroup>
+
 </Project>
