更新 修正一些命名規則

--- a/MobeAdmin/MobeAdmin/MobeAdmin.csproj
+++ b/MobeAdmin/MobeAdmin/MobeAdmin.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MobeAdmin.Core\MobeAdmin.Core.csproj" />
+    <ProjectReference Include="..\MobeAdmin.Helper\MobeAdmin.Helper.csproj" />
     <ProjectReference Include="..\MobeAdmin.Service\MobeAdmin.Service.csproj" />
     <ProjectReference Include="..\MobeAdmin.Utility\MobeAdmin.Utility.csproj" />
   </ItemGroup>
